--- a/index.html
+++ b/index.html
@@ -500,14 +500,14 @@
                 <a href="https://www.amazon.in/dp/B08N5WRWNW" target="_blank">
                     <img src="https://m.media-amazon.com/images/I/61mIUCd-37L._SX679_.jpg" alt="RGB Gaming Mouse">
                 </a>
-                <p>RGB Gaming Mouse</p>
+                <p>oneplus 10r 5g </p>
                 <button onclick="addToCart(event)">Add to Cart</button>
             </div>
             <div class="product">
                 <a href="https://www.amazon.in/dp/B07WHS7D9P" target="_blank">
                     <img src="https://m.media-amazon.com/images/I/81Zt42ioCgL._SX679_.jpg" alt="Mechanical Keyboard">
                 </a>
-                <p>Mechanical Keyboard</p>
+                <p>Monitor 4k screen </p>
                 <button onclick="addToCart(event)">Add to Cart</button>
             </div>
             <div class="product">
